fix: reorder resume download button for better visibility and enhance button styles

--- a/style.css
+++ b/style.css
@@ -946,3 +946,21 @@
 #leaves i:nth-of-type(13n) { -webkit-animation-delay: 1s;  }
 #leaves i:nth-of-type(14n) { -webkit-animation-delay: 4.7s;}
 #leaves i:nth-of-type(15n) { -webkit-animation-delay: 3s;  }
+
+button {
+    background-color: var(--body-bg-color);
+    border: none;
+    color: var(--link-visited);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: var(--link-visited);
+    color: white;
+}
